force-app/main/default/objects/Opportunity/fields/fw1__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>fw1__TrackingNumber__c</fullName>
    <label>zTracking Number - OBSOLETE</label>
    <length>12</length>
    <type>Text</type>
</CustomField>