force-app/main/default/objects/Opportunity/fields/Game_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Game_Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when game contract is received</description>
    <label>Game Contract Received</label>
    <type>Checkbox</type>
</CustomField>