force-app/main/default/objects/Opportunity/fields/Game_Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Game_Contract_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when game contract is sent</description>
    <label>Game Contract Sent</label>
    <type>Checkbox</type>
</CustomField>