force-app/main/default/objects/Opportunity/fields/Game_Type_Competition_1__c.field-meta.xml
<CustomField>
    <fullName>Game_Type_Competition_1__c</fullName>
    <label>Game Type Competition 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Official Game</fullName>
            </value>
            <value>
                <fullName>Unofficial Game</fullName>
            </value>
            <value>
                <fullName>JV Game</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>