force-app/main/default/objects/Opportunity/fields/Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card__c</fullName>
    <label>Gift Card</label>
    <length>20</length>
    <type>Text</type>
</CustomField>