force-app/main/default/objects/Opportunity/fields/GL_Webcode__c.field-meta.xml
<CustomField>
    <fullName>GL_Webcode__c</fullName>
    <label>GL Webcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>