force-app/main/default/objects/Opportunity/fields/Hard_Rock_Meal__c.field-meta.xml
<CustomField>
    <fullName>Hard_Rock_Meal__c</fullName>
    <description>Choose if the team or Tag has a specialty team meal.</description>
    <label>Hard Rock Specialty Meal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>