force-app/main/default/objects/Opportunity/fields/Illuminations_Specialty_Meal__c.field-meta.xml
<CustomField>
    <fullName>Illuminations_Specialty_Meal__c</fullName>
    <label>Epcot Forever Specialty Meal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>