force-app/main/default/objects/Opportunity/fields/Inbound_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Arrival_Time__c</fullName>
    <description>this is the time the flight will land in the city where the trip begins</description>
    <label>Inbound Arrival Time</label>
    <type>TextArea</type>
</CustomField>