force-app/main/default/objects/Opportunity/fields/Inbound_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Departure_Time__c</fullName>
    <description>Time the flight will take off at the passengers home airport.</description>
    <label>Inbound Departure Time</label>
    <type>TextArea</type>
</CustomField>