force-app/main/default/objects/Opportunity/fields/Inbound_Flight__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Flight__c</fullName>
    <description>Flight number for the flight bringing passengers to the events.</description>
    <label>Inbound Flight #</label>
    <type>TextArea</type>
</CustomField>