force-app/main/default/objects/Opportunity/fields/Individual_Registration__c.field-meta.xml
<CustomField>
    <fullName>Individual_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Team Is Registering Individually If Checked</description>
    <label>Individual Registration</label>
    <type>Checkbox</type>
</CustomField>