force-app/main/default/objects/Opportunity/fields/Intro_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Intro_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intro Email Sent</label>
    <type>Checkbox</type>
</CustomField>