force-app/main/default/objects/Opportunity/fields/Intro_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Email_Sent_Date__c</fullName>
    <label>Intro Email Sent Date</label>
    <type>Date</type>
</CustomField>