force-app/main/default/objects/Opportunity/fields/Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes__c</fullName>
    <label>Invoice Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>