force-app/main/default/objects/Opportunity/fields/Itinerary_Added_To_Transportation_Grid__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Added_To_Transportation_Grid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Itinerary Added To Transportation Grid</label>
    <type>Checkbox</type>
</CustomField>