force-app/main/default/objects/Opportunity/fields/JV__c.field-meta.xml
<CustomField>
    <fullName>JV__c</fullName>
    <description>Bringing JV Team</description>
    <label>JV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>