force-app/main/default/objects/Opportunity/fields/JV_Games_Requested__c.field-meta.xml
<CustomField>
    <fullName>JV_Games_Requested__c</fullName>
    <label>JV Games Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>