force-app/main/default/objects/Opportunity/fields/Kennedy_Space_Center__c.field-meta.xml
<CustomField>
    <fullName>Kennedy_Space_Center__c</fullName>
    <label>Kennedy Space Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>