force-app/main/default/objects/Opportunity/fields/Key_Booster_Google_Meets__c.field-meta.xml
<CustomField>
    <fullName>Key_Booster_Google_Meets__c</fullName>
    <label>Key Boosters Google Meets</label>
    <type>DateTime</type>
</CustomField>