force-app/main/default/objects/Opportunity/fields/Kobe_Steakhouse__c.field-meta.xml
<CustomField>
    <fullName>Kobe_Steakhouse__c</fullName>
    <label>Kobe Steakhouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>