force-app/main/default/objects/Opportunity/fields/KSA_Webcode__c.field-meta.xml
<CustomField>
    <fullName>KSA_Webcode__c</fullName>
    <formula>X2_Digit_Year__c + Sport_Abbreviation__c + Code_Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KSA Webcode</label>
    <type>Text</type>
</CustomField>