force-app/main/default/objects/Opportunity/fields/KSADestination_Interested_in_Traveling__c.field-meta.xml
<CustomField>
    <fullName>KSADestination_Interested_in_Traveling__c</fullName>
    <label>Destination Interested in Traveling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Myrtle Beach</fullName>
            </value>
            <value>
                <fullName>Nashville</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Orlando</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Washington, DC</fullName>
            </value>
            <value>
                <fullName>Washington DC</fullName>
            </value>
            <value>
                <fullName>Anaheim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>