force-app/main/default/objects/Opportunity/fields/KSAID__c.field-meta.xml
<CustomField>
    <fullName>KSAID__c</fullName>
    <label>KSAID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>