force-app/main/default/objects/Opportunity/fields/KSAPreferred_Mode_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>KSAPreferred_Mode_of_Communication__c</fullName>
    <label>Preferred Mode of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>