force-app/main/default/objects/Opportunity/fields/Land_Only__c.field-meta.xml
<CustomField>
    <fullName>Land_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Land Only</label>
    <type>Checkbox</type>
</CustomField>