force-app/main/default/objects/Opportunity/fields/Local_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Local_Transportation__c</fullName>
    <description>Teams or Tags that are or are not using our Transportation while in the Destination City.</description>
    <label>Local Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>