force-app/main/default/objects/Opportunity/fields/Location_Competition_1__c.field-meta.xml
<CustomField>
    <fullName>Location_Competition_1__c</fullName>
    <label>Location Competition 1</label>
    <type>TextArea</type>
</CustomField>