force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Booked Another Tournament</fullName>
            </value>
            <value>
                <fullName>Coach Moved</fullName>
            </value>
            <value>
                <fullName>Competition Scheduling Conflict</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Information Only</fullName>
            </value>
            <value>
                <fullName>Looking for Following Year</fullName>
            </value>
            <value>
                <fullName>New Facility Being Built</fullName>
            </value>
            <value>
                <fullName>No Board Approval</fullName>
            </value>
            <value>
                <fullName>No Parent Buy In</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not Enough Time To Fundraise</fullName>
            </value>
            <value>
                <fullName>Not Interesting In Traveling To Florida</fullName>
                <label>Not Interested In Traveling To Offered Destinations</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price too High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>