force-app/main/default/objects/Opportunity/fields/Lunch_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Vouchers__c</fullName>
    <label>Lunch Vouchers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>