force-app/main/default/objects/Opportunity/fields/Manifest_Submitted_to_Airline__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Submitted_to_Airline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manifest Submitted to Airline</label>
    <type>Checkbox</type>
</CustomField>