force-app/main/default/objects/Opportunity/fields/Margaritaville_Specialty_Meal__c.field-meta.xml
<CustomField>
    <fullName>Margaritaville_Specialty_Meal__c</fullName>
    <description>Choose if Tag or Team has one of the meals</description>
    <label>Margaritaville Specialty Meal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>