force-app/main/default/objects/Opportunity/fields/Max_Prep_State_Rankings__c.field-meta.xml
<CustomField>
    <fullName>Max_Prep_State_Rankings__c</fullName>
    <label>Max Prep State Rankings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>