force-app/main/default/objects/Opportunity/fields/Mobile_without_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Mobile_without_Formatting__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( Mobile_Number__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile without Formatting</label>
    <type>Text</type>
</CustomField>