force-app/main/default/objects/Opportunity/fields/MOD__c.field-meta.xml
<CustomField>
    <fullName>MOD__c</fullName>
    <formula>MOD(VALUE(Code_Auto_Number__c), 10)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>