force-app/main/default/objects/Opportunity/fields/Movie_Private_Team_Event__c.field-meta.xml
<CustomField>
    <fullName>Movie_Private_Team_Event__c</fullName>
    <label>Movie - Private Team Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>