force-app/main/default/objects/Opportunity/fields/NBC_Grille_Specialty_Meal__c.field-meta.xml
<CustomField>
    <fullName>NBC_Grille_Specialty_Meal__c</fullName>
    <label>NBC Grille Specialty Meal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>