force-app/main/default/objects/Opportunity/fields/Nominee_s_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Home_Address__c</fullName>
    <label>Nominee&apos;s Home Address</label>
    <type>TextArea</type>
</CustomField>