force-app/main/default/objects/Opportunity/fields/Official_Games_Requested__c.field-meta.xml
<CustomField>
    <fullName>Official_Games_Requested__c</fullName>
    <label>Official Games Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>