force-app/main/default/objects/Opportunity/fields/One_Way_Airline_Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>One_Way_Airline_Seats_Purchased__c</fullName>
    <label>One-Way Airline Seats Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>