force-app/main/default/objects/Opportunity/fields/Orlando_Magic__c.field-meta.xml
<CustomField>
    <fullName>Orlando_Magic__c</fullName>
    <label>Orlando Magic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>