force-app/main/default/objects/Opportunity/fields/Outbound_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Arrival_Time__c</fullName>
    <description>Time the flight will land back at passengers home</description>
    <label>Outbound Arrival Time</label>
    <type>TextArea</type>
</CustomField>