force-app/main/default/objects/Opportunity/fields/Outbound_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Departure_Time__c</fullName>
    <description>Time the flight is scheduled to depart for home from the events</description>
    <label>Outbound Departure Time</label>
    <type>TextArea</type>
</CustomField>