force-app/main/default/objects/Opportunity/fields/Outbound_Flight__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Flight__c</fullName>
    <description>Flight # for the flight taking the passengers home</description>
    <label>Outbound Flight #</label>
    <type>TextArea</type>
</CustomField>