force-app/main/default/objects/Opportunity/fields/Package_Component_Sheet_Double_Checked__c.field-meta.xml
<CustomField>
    <fullName>Package_Component_Sheet_Double_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Component Sheet Double Checked</label>
    <type>Checkbox</type>
</CustomField>