force-app/main/default/objects/Opportunity/fields/Package_Component_Sheets_Complete__c.field-meta.xml
<CustomField>
    <fullName>Package_Component_Sheets_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Component Sheets Complete</label>
    <type>Checkbox</type>
</CustomField>