force-app/main/default/objects/Opportunity/fields/PAX_1__c.field-meta.xml
<CustomField>
    <fullName>PAX_1__c</fullName>
    <description>First Passengers Full Name</description>
    <label>PAX 1</label>
    <type>TextArea</type>
</CustomField>