force-app/main/default/objects/Opportunity/fields/PAX_2__c.field-meta.xml
<CustomField>
    <fullName>PAX_2__c</fullName>
    <label>PAX 2</label>
    <type>TextArea</type>
</CustomField>