force-app/main/default/objects/Opportunity/fields/PAX_3__c.field-meta.xml
<CustomField>
    <fullName>PAX_3__c</fullName>
    <label>PAX 3</label>
    <type>TextArea</type>
</CustomField>