force-app/main/default/objects/Opportunity/fields/Pep_Rally_Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Pep_Rally_Breakfast__c</fullName>
    <label>Pep Rally Breakfast</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>