force-app/main/default/objects/Opportunity/fields/Pizza_Party__c.field-meta.xml
<CustomField>
    <fullName>Pizza_Party__c</fullName>
    <label>Pizza Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>