force-app/main/default/objects/Opportunity/fields/Post_Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Event_Notes__c</fullName>
    <label>Post Event Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>