force-app/main/default/objects/Opportunity/fields/Potential_Tag_Alongs__c.field-meta.xml
<CustomField>
    <fullName>Potential_Tag_Alongs__c</fullName>
    <label>Potential Tag Alongs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>