force-app/main/default/objects/Opportunity/fields/Practices_Requested__c.field-meta.xml
<CustomField>
    <fullName>Practices_Requested__c</fullName>
    <label>Practices Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>