force-app/main/default/objects/Opportunity/fields/Pre_Game_Pasta_Meal__c.field-meta.xml
<CustomField>
    <fullName>Pre_Game_Pasta_Meal__c</fullName>
    <label>Pre Game Pasta Meal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>