force-app/main/default/objects/Opportunity/fields/Pre_Game_Tailgate_Party__c.field-meta.xml
<CustomField>
    <fullName>Pre_Game_Tailgate_Party__c</fullName>
    <label>Pre Game Tailgate Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>