force-app/main/default/objects/Opportunity/fields/Predicted_Athletes__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Athletes__c</fullName>
    <label>Predicted Athletes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>