force-app/main/default/objects/Opportunity/fields/Predicted_Coaches__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Coaches__c</fullName>
    <label>Predicted Coaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>