force-app/main/default/objects/Opportunity/fields/Predicted_Fans__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Fans__c</fullName>
    <label>Predicted Fans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>