force-app/main/default/objects/Opportunity/fields/Preferred_Airline_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Airline_Schedule__c</fullName>
    <label>Preferred Airline Schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>