force-app/main/default/objects/Opportunity/fields/Private_School__c.field-meta.xml
<CustomField>
    <fullName>Private_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private School</label>
    <type>Checkbox</type>
</CustomField>