force-app/main/default/objects/Opportunity/fields/Probability_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Probability_To_Contact__c</fullName>
    <formula>Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability To Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>