force-app/main/default/objects/Opportunity/fields/Quad_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Quad_Rooms__c</fullName>
    <description>Number of Quad rooms for this Opportunity</description>
    <label>Quad Rooms</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>