force-app/main/default/objects/Opportunity/fields/Quad_Suite_Rate__c.field-meta.xml
<CustomField>
    <fullName>Quad_Suite_Rate__c</fullName>
    <label>Suite Quad Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>