force-app/main/default/objects/Opportunity/fields/Record_Locator__c.field-meta.xml
<CustomField>
    <fullName>Record_Locator__c</fullName>
    <label>Record Locator</label>
    <length>8</length>
    <type>Text</type>
</CustomField>