force-app/main/default/objects/Opportunity/fields/RepeatLastEmailDateTIme__c.field-meta.xml
<CustomField>
    <fullName>RepeatLastEmailDateTIme__c</fullName>
    <label>RepeatLastEmailDateTIme</label>
    <type>DateTime</type>
</CustomField>