force-app/main/default/objects/Opportunity/fields/Resort_Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resort_Booking_Notes__c</fullName>
    <label>Resort Booking Notes</label>
    <type>TextArea</type>
</CustomField>