force-app/main/default/objects/Opportunity/fields/Resort_Breakfast_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Resort_Breakfast_Coupon__c</fullName>
    <label>Resort Buffet Breakfast Coupon</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>