force-app/main/default/objects/Opportunity/fields/Resort_Counter_Service_Breakfast_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Resort_Counter_Service_Breakfast_Coupon__c</fullName>
    <label>Resort Counter Service Breakfast Coupon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>